Ickle README changes

--- a/README
+++ b/README
@@ -2,4 +2,7 @@ Simple OS
 
 Simple OS is a project to create a simple, working x86 operating system.
 
-TODO: Finish
+This is a educational project - not a profesional development. Don't expect perfection
+
+The code is available with no licensing and no warrenty - You can take it and do whatever you like with it with no legal obligations ( Though credits are always appritiated :) )
+and we are not responsible when this code does not work for you.
